# CMake_Practice

./: CMakeLists.txt  README.md  tutorial.cxx
Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step1/Step1_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  TutorialConfig.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Step1/Step1_build/Tutorial.dir/Debug/: Tutorial.exe.recipe  Tutorial.ilk
Step1/Step1_build/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step1/Step1_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Step1/Step1_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
Step1/Step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Step1/Step1_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
